--- a/_aula_01/primeira.html
+++ b/_aula_01/primeira.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira página com JavaScript</title>
 </head>
-
 <body>
-      
+      <script>
+        console.log("Hello, World!");
+      </script>
 </body>
 </html>
